--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "62b40545-dd88-430b-bb06-d49cee031374",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "import wandb\n",
     "from wandb.keras import WandbCallback\n",
     "\n",
-    "from model import GetModel, get_feature_extractor\n",
+    "from model import SimpleSupervisedtModel, ArcFaceSupervisedModel, get_feature_extractor\n",
     "from config import get_test_config\n",
     "from data import GetDataloader\n",
     "from utils import ShowBatch\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "75fcb8a6-271b-4863-92a4-f5fc7b84d95a",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "dbf06d28-3344-4960-a201-839a58ea6f76",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,8 @@
       " 'num_folds': 5,\n",
       " 'num_labels': 26,\n",
       " 'resize': False,\n",
-      " 'test_img_path': '../128x128/test_images-128-128/test_images-128-128'}\n"
+      " 'test_img_path': '../128x128/test_images-128-128/test_images-128-128',\n",
+      " 'use_augmentations': False}\n"
      ]
     }
    ],
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "ec595073-0f4d-4381-a811-aafae2c242e2",
    "metadata": {},
    "outputs": [
@@ -235,7 +236,7 @@
        "4  ../128x128/train_images-128-128/train_images-1...       1   4.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "d112bcc7-3ef7-4091-a3d6-eca90b56388b",
    "metadata": {},
    "outputs": [
@@ -328,7 +329,7 @@
        "4  ../128x128/test_images-128-128/test_images-128...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,23 +354,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "f98ac8df-9a41-4dce-891f-b5231ff08667",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100% 5/5 [00:00<00:00, 12.84it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(51033, 1280) (51033,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# train_embeddings = []\n",
-    "# train_index = []\n",
+    "train_embeddings = []\n",
+    "train_index = []\n",
     "\n",
-    "# for fold in tqdm(range(args.num_folds)):\n",
-    "#     data = np.load(f'{TRAIN_EMBED_PATH}/embedding_{fold}.npz', allow_pickle=True)\n",
-    "#     train_embeddings.extend(data['embedding'])\n",
-    "#     train_index.extend(data['index'])\n",
+    "for fold in tqdm(range(args.num_folds)):\n",
+    "    data = np.load(f'{TRAIN_EMBED_PATH}/embedding_{fold}.npz', allow_pickle=True)\n",
+    "    train_embeddings.extend(data['embedding'])\n",
+    "    train_index.extend(data['index'])\n",
     "    \n",
-    "# train_embeddings = np.array(train_embeddings)\n",
-    "# train_index = np.array(train_index)\n",
+    "train_embeddings = np.array(train_embeddings)\n",
+    "train_index = np.array(train_index)\n",
     "\n",
-    "# print(train_embeddings.shape, train_index.shape)"
+    "print(train_embeddings.shape, train_index.shape)"
    ]
   },
   {
@@ -414,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "ef7ed3f3-4ff6-4237-b89b-e343aa45f2d9",
    "metadata": {},
    "outputs": [
@@ -424,7 +447,7 @@
        "NearestNeighbors(metric='cosine', n_neighbors=50)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "6bb728e4-0f62-4cbc-80f9-1641008e629b",
    "metadata": {},
    "outputs": [],
@@ -456,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "16d13763-ba7b-4d31-a187-a2501982a643",
    "metadata": {},
    "outputs": [
@@ -464,7 +487,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% 5/5 [00:53<00:00, 10.74s/it]\n"
+      "100% 5/5 [02:20<00:00, 28.17s/it]\n"
      ]
     },
     {
@@ -479,7 +502,7 @@
     "test_embeddings = []\n",
     "\n",
     "for fold in tqdm(range(args.num_folds)):\n",
-    "    model = tf.keras.models.load_model(f'{MODEL_PATH}/model_{fold}.h5')\n",
+    "    model = tf.keras.models.load_model(f'{MODEL_PATH}/model_{fold}')\n",
     "    feature_extractor = get_feature_extractor(model)\n",
     "\n",
     "    embeddings = feature_extractor.predict(testloader)\n",
@@ -501,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "4b90bae0-94a5-4731-9143-f8fe973a8343",
    "metadata": {},
    "outputs": [],
@@ -511,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "248a495d-13aa-4710-b91a-2451a548fc72",
    "metadata": {},
    "outputs": [],
@@ -521,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "b37d4424-3dc2-4d9b-9059-8e778908fb67",
    "metadata": {},
    "outputs": [
@@ -529,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% 27956/27956 [00:16<00:00, 1743.13it/s]\n"
+      "100% 27956/27956 [00:16<00:00, 1728.34it/s]\n"
      ]
     }
    ],
@@ -542,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "487aa97d-ed00-49e4-a32c-26256bbcbd1a",
    "metadata": {},
    "outputs": [],
@@ -553,9 +576,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ac67483-96e3-4dff-b28d-38e0c6c5d854",
+   "metadata": {},
+   "source": [
+    "# Log LB Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "564c9c2c-1ac7-4302-994e-56c3dc2b9433",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/ayut/happywhale/runs/3fwfhon0\" target=\"_blank\">46EZHKMK-infer</a></strong> to <a href=\"https://wandb.ai/ayut/happywhale\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br/>Waiting for W&B process to finish, PID 1063... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d11bfa4ac4c642ed9c6401ec9f475806",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\">\n",
+       "<h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>LB Score</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\">\n",
+       "<h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>LB Score</td><td>0.038</td></tr></table>\n",
+       "</div></div>\n",
+       "Synced 4 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)\n",
+       "<br/>Synced <strong style=\"color:#cdcd00\">46EZHKMK-infer</strong>: <a href=\"https://wandb.ai/ayut/happywhale/runs/3fwfhon0\" target=\"_blank\">https://wandb.ai/ayut/happywhale/runs/3fwfhon0</a><br/>\n",
+       "Find logs at: <code>./wandb/run-20220210_085030-3fwfhon0/logs</code><br/>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "run = wandb.init(project='happywhale',\n",
+    "                 config=vars(args),\n",
+    "                 group=f'effnetb0',\n",
+    "                 job_type='inference',\n",
+    "                 name=f'{args.exp_id}-infer')\n",
+    "\n",
+    "wandb.log({'LB Score': 0.038})\n",
+    "wandb.finish()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dc77587-8c16-44d2-8d07-8dcd79bfb561",
+   "id": "4bbc7653-5a10-4ad0-8e84-f36483dd5d6f",
    "metadata": {},
    "outputs": [],
    "source": []
