unified tpu+gpu

--- a/train-supervised-ids.ipynb
+++ b/train-supervised-ids.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "521d590e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "from model import SimpleSupervisedModel, ArcFaceSupervisedModel, get_feature_extractor\n",
     "from config import get_train_config\n",
     "from data import GetDataloader\n",
-    "from utils import ShowBatch, id_generator, get_stratified_k_fold\n",
+    "from utils import ShowBatch, id_generator, get_stratified_k_fold, setup_device\n",
     "from callbacks import GetCallbacks\n",
     "\n",
     "pp = pprint.PrettyPrinter(indent=1)"
